--- a/circle.yml
+++ b/circle.yml
@@ -1,16 +1,5 @@
 ---
 test:
   override:
-    - "sudo GOPATH=/usr/local/go_workspace make test"
-
-machine:
-  environment:
-    IMPORT_PATH: "github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
-
-dependencies:
-  pre:
-    - go get github.com/tools/godep
-
-  override:
-    - mkdir -p "$GOPATH/src/$IMPORT_PATH"
-    - rsync -azC --delete ./ "$GOPATH/src/$IMPORT_PATH/"
+    - echo $GOPATH
+    - "GOPATH=/usr/local/go_workspace make test"
