--- a/circle.yml
+++ b/circle.yml
@@ -2,5 +2,9 @@
 test:
   override:
     - echo $GOPATH
-    - sudo chown ubuntu:ubuntu /usr/local/go_workspace
-    - "GOPATH=/usr/local/go_workspace make test"
+    - sudo chown -R ubuntu:ubuntu /usr/local/go_workspace
+    - sudo chown -R ubuntu:ubuntu /home/ubuntu/.go_workspace
+    - sudo chown -R ubuntu:ubuntu /home/ubuntu/.go_project
+    #- export GOPATH=/usr/local/go_workspace
+    - export GOPATH=/usr/ubuntu/.go_project
+    - make test
