simpler circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -1,11 +1,11 @@
 ---
 test:
   override:
-    - echo $GOPATH
+    #- echo $GOPATH
     #- sudo chown -R ubuntu:ubuntu /usr/local/go_workspace
     #- sudo chown -R ubuntu:ubuntu /home/ubuntu/.go_workspace
-    - sudo chown -R ubuntu:ubuntu /home/ubuntu/.go_project
+    #- sudo chown -R ubuntu:ubuntu /home/ubuntu/.go_project
     #/home/ubuntu/.go_workspace:/usr/local/go_workspace:/home/ubuntu/.go_project
     #- export GOPATH=/usr/local/go_workspace
-    - export GOPATH=/home/ubuntu/.go_project
+    #- export GOPATH=/home/ubuntu/.go_project
     - GOPATH=/home/ubuntu/.go_project make test
